@@ -1,3 +1,9 @@
+2008-11-21  Mike Kestner  <mkestner@novell.com>
+
+	* glib/ManagedValue.cs: rework to ref count a ManagedValue instance
+	and pass a GCHandle to it around, instead of taking out multiple
+	gchandles on the managed target itself.
+
 2008-11-21  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* glib/Global.cs: implement Global.ApplicationName for localized
